test/asm/invalid-union.asm
ENDU ; outside UNION
NEXTU ; outside UNION
UNION ; outside SECTION

SECTION "test", WRAM0
UNION ; no ENDU
